--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -16,7 +16,7 @@
 	</head>
 
 	<body >
-		<div class="productos">
+		<div class="opciones">
 			<a href="listados.html"  class="boton" id="bordes1">Listados</a>
 			<a href="nuevaPagina.html" class="boton" id="bordes2">Nueva Pagina</a>
 		</div>
