--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -17,7 +17,7 @@
 
 	<body >
 		<div class="opciones">
-			<a href="list.pl"  class="boton" id="bordes1">Listados</a>
+			<a href="cgi-bin/list.pl"  class="boton" id="bordes1">Listados</a>
 			<a href="new.html" class="boton" id="bordes2">Nueva Pagina</a>
 		</div>
 		<div style="text-align: center;">
